# rnbo.example.juce

./: .gitignore  .gitmodules  App.cmake  CMakeLists.txt  CUSTOM_UI.md  Plugin.cmake  README.md  UNITY.md
export/: README.md
patches/: three-param-kink.maxpat
src/: CustomAudioEditor.cpp  CustomAudioEditor.h  CustomAudioProcessor.cpp  CustomAudioProcessor.h  Main.cpp  MainComponent.cpp  Plugin.cpp  WebBrowserAudioEditor.cpp  WebBrowserAudioEditor.h  ui-config.h.in
src/nativeui/: CMakeLists.txt
src/webui/: CMakeLists.txt  WebBrowserAudioEditor.cpp  index.html  main.js  package-lock.json  package.json  vite.config.js
ui/NewProject/Source/: RootComponent.cpp  RootComponent.h
